# twicas-monitoring-app

./: .env  .env.example  README.md  compose-opensearch.yml  compose.yml  output.m4a  pyproject.toml  requirements.txt
compose/: Dockerfile  compose.yml
compose-nodejs/: Dockerfile  compose.yml
compose-nodejs/playwright/: package-lock.json  package.json
compose-nodejs/playwright/tests/: test1.spec.ts
compose/playwright/: pyproject.toml  test1.py
containers/ffmpeg/: Dockerfile
containers/flask/: Dockerfile  README.md  main.py  util.py
containers/flask/src/: app.py  config.py  util.py
containers/puppeteer/: .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
containers/puppeteer/src/: dotenv.ts  environments.ts  interfaces.ts  main.js  main.ts  record-media.js
containers/puppeteer/src/api/: collect_comments.ts  record_media.ts  twicas_monitoring.ts  webhook.ts
containers/puppeteer/src/common/: setup.ts  utils.ts
flask/: main.py
flask/templates/: index.html
test-playwright-nodejs/: package-lock.json  package.json
test-playwright-nodejs/tests/: t.ts  test1.spec.ts
webhook/: webhook.py
webhook_test/: collect_comments.py  util.py
