[tool.poetry]
name = "webhook"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
pytwitcasting = "^1.0.0"
lxml = "^5.3.0"
pytest-playwright = "^0.5.2"
playwright = "^1.47.0"
requests = "^2.32.3"
flask = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
